[CrOS MultiDevice] Improve logging performance.

Previously std::stringstream::str() was called twice, which generates
two distinct (but identical) strings. This CL caches the result of the
call and uses it twice.

Bug: 862725
Change-Id: I0384981a259b12d6c3ecf1420436f71e1e002fe6
Reviewed-on: https://chromium-review.googlesource.com/1134218
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574625}
Former-commit-id: f39a6efa39053b51201f6c601a43955a5dd58a5f